[package]
name = "copy-mfa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-authenticator = "0.3.0"
arboard = { version = "2", features = [ "image-data", "wayland-data-control" ], default-features = false }